2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * client/smburi.c:
        * common/gdbusutils.c:
        * common/gmountsource.c:
        * daemon/gvfsbackendftp.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsdaemon.c:
        * daemon/gvfsjob.c:
        * daemon/gvfsjobdbus.c:
        * daemon/gvfsjobopenforwrite.h:
        * daemon/mount.c:
        * daemon/pty_open.c:
        * test/benchmark-gvfs-big-files.c:
        * test/benchmark-gvfs-small-files.c:
        * test/benchmark-posix-small-files.c:
	Code cleanups from Kjartan Maraas.

2007-11-15  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.0.2 ===

2007-11-15  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require gio 0.1.2

	* NEWS:
	Update for release

2007-11-15  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/ftp.mount.in:
        * daemon/gvfs-daemon.service.in:
        * daemon/sftp.mount.in:
        * daemon/smb-browse.mount.in:
        * daemon/smb.mount.in:
        * daemon/trash.mount.in:
	Rename gvfs daemon processes to start
	with "gvfsd". This is shorter and nicer.

2007-11-14  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
	Add unmount operation and
	unregister mount mounttracker call
	
        * client/gdaemonvolume.c:
	Implement client side of unmount
	
        * daemon/Makefile.am:
        * daemon/gvfsjobunmount.[ch]: Added.
	Add unmount job type
	
        * daemon/gvfsbackend.[ch]:
	Implement unmount

2007-11-14  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.c:
	Handle NULL callback in _g_dbus_connection_call_async
	
        * daemon/gvfsdaemon.c:
	Re-register backends with new main daemons

2007-11-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]: